# arrayallocator

./: .cproject  .project  CMakeLists.txt  LICENSE  README.md  allocator.conf  arrayalloc.spec
examples/: CMakeLists.txt  hash_in_shmem.c  list_in_array.c
includes/: bayrepodump.h  bayrepomalloc.h  bayreposbrk.h  bayrepostrings.h
src/: CMakeLists.txt  bayrepomalloc.c  bayreposbrk.c  bayrepostings.c  dumper.c
tests/: CMakeLists.txt  main.c  utils.c  utils.h
tests/suites/: CMakeLists.txt  dumptest.c  malloctest.c  maptest.c  ut.c
